5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1684_1105.log
== TEST (2019-04-25 18:40:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:51:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
                                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:51:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
                                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:51:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
                                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:51:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(turta))
                                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:52:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
                                                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:52:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
                                                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:52:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
	print("Brasao invalido")
	
	
-- ERROR:
File "XXXX", line 5
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta))
                                                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:53:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta)):
	print("Brasao invalido")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if((a!=lobo)and(a!=leao)and(a!=veado)and(a!=dragao)and(a!=rosa)and(a!=sol)and(a!=lula)and(a!=esfolado)and(a!=turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:57:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
	
	
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:57:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
	
	
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:57:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
	
	
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:08:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
elif(a=="lobo"):
	print("Stark")
elif(a=="leao"):
	print("Lannister")
elif(a=="veado"):
	print("Baratheon")
elif(a=="dragao"):
	print("Targaryen")
elif(a=="rosa"):
	print("Tyrell")
elif(a=="sol"):
	print("Martell")
elif(a=="lula"):
	print("Greyjoy")
elif(a=="esfolado"):
	print("Bolton")
elif(a=="turta"):
	print("Tully")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:09:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
elif(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:10:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
elif(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 19:10:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("Entrada: ")
print("Entrada:", a)
if((a!="lobo")and(a!="leao")and(a!="veado")and(a!="dragao")and(a!="rosa")and(a!="sol")and(a!="lula")and(a!="esfolado")and(a!="turta")):
	print("Brasao invalido")
elif(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
-- EXECUTION TIME:
0.137483
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
